# cypher_testing

./: CMakeLists.txt  Cypher.g4  Dockerfile  main.cpp  nodes.txt  sample_queries.txt
ast_generator/: ASTBuilder.cpp  ASTBuilder.h  ASTStructure.h
query_planner/: Operators.cpp  Operators.h  QueryPlanner.cpp  QueryPlanner.h
semantic_analyzer/: Scope.cpp  Scope.h  ScopeManager.cpp  ScopeManager.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h
